# clavenar-lite

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: ci.yml  release.yml
docs/: SEQUENCES.md
policies/: governance.rego
scripts/: smoke-e2e.sh  smoke-install.sh
src/: heuristics.rs  ledger.rs  lib.rs  main.rs  policy.rs  proxy.rs  rate_limit.rs  report.rs  slack.rs  supply_chain.rs  webhook.rs
tests/: proxy_integration.rs  rego_conformance.rs
